<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="authorize_web">Authorize via web page</string>
    <string name="open_system_photo">Open system album and share</string>
    <string name="set_default_title">Set default topic</string>
    <string name="media_path">path</string>

    <string name="add_photo_video">Add photos or videos</string>
    <string name="clear">Empty</string>
    <string name="image">Photo</string>
    <string name="video">Video</string>
    <string name="auth_success">Authorization succeeded</string>
    <string name="share_success">Successful sharing</string>
    <string name="scope_hint">Required permissions (separated by, signs)</string>
    <string name="optional_scope">Optional permissions, not selected by default (separated by, signs)</string>
    <string name="optional_1_scope">Optional permissions, selected by default (separated by, signs)</string>
    <string name="set_scope_btn">Set up</string>
    <string name="app_name">sdk test</string>

    <string name="share_to_aweme_with_shareid_no_callbacK">Start with shareId without callback</string>
    <string name="second_default_topic">Second default topic</string>
    <string name="share_to_aweme_with_shareid_callback">Start with shareId callback</string>
    <string name="sharing_mini_prog">Sharing and Carrying Mini Program</string>
    <string name="music_collection">Music Collection</string>
    <string name="interests">Interests</string>
    <string name="sound_create">Sound upload</string>
    <string name="basic">user.info.basic</string>
    <string name="username">user.info.username</string>
    <string name="email">user.info.email</string>
    <string name="phone">user.info.phone</string>
    <string name="success_user_info">Succeeded in obtaining user information</string>
    <string name="music_collection_scope" translatable="false">music.collection</string>
    <string name="user_info_scope" translatable="false">user_info</string>
    <string name="interests_scope" translatable="false">user.ue</string>
    <string name="share_sound_create_scope" translatable="false">share.sound.create</string>
    <string name="user_info_basic_scope" translatable="false">user.info.basic</string>
    <string name="user_info_username_scope" translatable="false">user.info.username</string>
    <string name="user_info_email_scope" translatable="false">user.info.email</string>
    <string name="user_info_phone_scope" translatable="false">user.info.phone</string>

    <string name="share_to_aweme">Share to TikTok</string>
    <string name="open_system_share">Open System Share</string>
    <string name="extra">extra:</string>
    <string name="anchor_source_type">anchor_source_type:</string>
    <string name="is_auto_attach_anchor">Auto Attach Anchor?</string>
    <string name="extra_share_config">Extra Share Config</string>
    <string name="disable_music_selection">Disable Music Selection</string>

    <string name="green_screen_text">Use Green Screen Format</string>
</resources>
