<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize_title"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/go_to_auth_just_through_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorize_web"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_auth"/>

    <Button
        android:id="@+id/go_to_system_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_system_photo"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_auth_just_through_web"/>

    <Button
        android:id="@+id/share_to_douyin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_to_aweme"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_system_picture"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/media_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_path"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_to_douyin"
        android:visibility="gone"/>

    <Button
        android:id="@+id/add_photo_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_video"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media_text"
        android:visibility="gone"/>

    <Button
        android:id="@+id/clear_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media_text"
        android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>