<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/scope_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="15dp" android:paddingStart="15dp"
        android:paddingRight="15dp" android:paddingEnd="15dp"
        tools:ignore="RtlSymmetry"
        app:counterEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/scope_edit"
            android:hint="@string/scope_hint"
            android:maxLines="5"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/opentional1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="15dp" android:paddingStart="15dp"
        android:paddingRight="15dp" android:paddingEnd="15dp"
        tools:ignore="RtlSymmetry"
        app:counterEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/scope_layout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/opentional1_edit"
            android:hint="@string/optional_scope"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/opentional2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="15dp" android:paddingStart="15dp"
        android:paddingRight="15dp" android:paddingEnd="15dp"
        tools:ignore="RtlSymmetry"
        app:counterEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/opentional1_layout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/opentional2_edit"
            android:hint="@string/optional_1_scope"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_scope_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/opentional2_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>